migrate to Chimera Linux

--- a/config/fuzzel/fuzzel.ini
+++ b/config/fuzzel/fuzzel.ini
@@ -1,10 +1,10 @@
 # output=<not set>
-font=Adwaita Mono
+# font=monospace
 # dpi-aware=auto
 # use-bold=no
-prompt=" "
+prompt="󰌽 "
 # placeholder=
-icon-theme=Adwaita-teal
+# icon-theme=default
 # icons-enabled=yes
 # hide-before-typing=no
 # fields=filename,name,generic
@@ -50,21 +50,21 @@ terminal=kitty -e
 # enable-mouse=yes
 
 [colors]
-background=1f3f4cf6
-text=657b83ff
-prompt=73ba25ff
+background=24262ff0
+# text=657b83ff
+prompt=ffffffff
 # placeholder=93a1a1ff
-input=73ba25ff
-match=73ba25ff
-selection=287072ff
+input=7fc8ffff
+# match=cb4b16ff
+selection=7fc8ffc0
 selection-text=ffffffff
-selection-match=73ba25ff
+# selection-match=cb4b16ff
 # counter=93a1a1ff
-border=35b9abff
+border=7fc8ffff
 
 [border]
 width=4
-# radius=10
+radius=10
 
 [dmenu]
 # mode=text  # text|index
