--- a/config/systemd/user/wallpaperd.service
+++ b/config/systemd/user/wallpaperd.service
@@ -5,6 +5,7 @@ After=niri.service
 Requisite=graphical-session.target
 
 [Service]
+Type=exec
 ExecStart=/home/carluad/.local/bin/wallpaperd
 ExecReload=kill -SIGUSR2 $MAINPID
 Restart=on-failure
