--- a/config/fuzzel/fuzzel.ini
+++ b/config/fuzzel/fuzzel.ini
@@ -2,7 +2,7 @@
 font=Adwaita Mono
 # dpi-aware=auto
 # use-bold=no
-prompt=" "
+prompt=" "
 # placeholder=
 icon-theme=Adwaita-teal
 # icons-enabled=yes
