--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -32,8 +32,8 @@
     "disable-scroll": true,
     "format": "{index} {icon}",
     "format-icons": {
-      "urgent": "",
-      "focused": "",
+      "urgent": "",
+      "focused": "",
       "default": ""
     }
   },
